# AgentLanguageLab

./: .env.local.example  .gitignore  AGENT.md  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
agent_language_lab/: __init__.py
agent_language_lab/agent/: __init__.py  action_executor.py  agent_loop.py  model_client.py  types.py
agent_language_lab/demo/: __init__.py  demo_executor.py  demo_model.py  run_demo.py  tool_catalog.py
agent_language_lab/model/: __init__.py  load_env.py  runtime_config.py  runtime_model.py
agent_language_lab/shared/: __init__.py  serialization.py
docs/architecture/: INDEX.md
docs/architecture/v0.0.1/: README.md
docs/architecture/v0.0.2/: README.md
docs/architecture/v0.0.3/: README.md
docs/architecture/v0.0.4/: README.md
docs/architecture/v0.0.5/: README.md
docs/superpowers/plans/: 2026-04-14-minimal-agent-loop.md  2026-04-18-python-agent-loop-refactor.md
docs/superpowers/specs/: 2026-04-14-minimal-agent-loop-design.md  2026-04-18-python-agent-loop-refactor-spec.md
python_tests/: test_agent_loop.py
src/agent/: action-executor.ts  agent-loop.ts  model-client.ts  types.ts
src/demo/: demo-executor.ts  demo-model.ts  demo-tool-catalog.ts  run-demo.ts
src/model/: load-env.ts  runtime-config.ts  runtime-model.ts  vercel-ai-model-client.ts
tests/agent/: agent-loop.test.ts  model-runtime.test.ts
types/: node-shims.d.ts
