[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-language-lab"
version = "0.1.0"
description = "Learning-oriented Python agent loop examples."
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["agent_language_lab*"]
